// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init notifyAccountNotVerified() should dispatch a notification because the base email integration is not verified 1`] = `
[
  {
    "payload": {
      "CTA": {
        "onClick": [Function],
        "text": "Click here to resend the verification email.",
        "type": "action",
      },
      "buttons": [],
      "id": "account-not-verified-notification",
      "message": "Your email address is not verified.",
      "status": "none",
      "style": "banner",
      "type": "warning",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyAccountNotVerified() should not do anything because the base email integration is verified 1`] = `[]`;

exports[`init notifyUserImpersonated() should dispatch a notification because user is impersonated 1`] = `
[
  {
    "payload": {
      "buttons": [],
      "id": "user-impersonated-notification",
      "message": "Impersonating <b>alex@gorgias.io</b> in <b>development</b> environment.
                cluster='us-east1-abcd' and account_id=1 and user_id=2",
      "status": "none",
      "style": "banner",
      "type": "warning",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`init notifyUserImpersonated() should not do anything because user is not impersonated 1`] = `[]`;
